package v62;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62";
option java_outer_classname = "AddTPCardProto";


message AddTPCardRequest{
    extend sys.BaseRequest{
        optional AddTPCardRequest cmd = 9001;
    }
    required TPCard card = 1;
}

message AddTPCardResponse{
    extend sys.BaseResponse{
        optional AddTPCardResponse cmd = 9001;
    }
}